# rag-docs-bot

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: architecture.md
sample_docs/: example1.md  example2.md
src/: main.py
src/api/: routes.py
src/generation/: llm.py
src/ingestion/: chunker.py  loader.py
src/retrieval/: embeddings.py  store.py
tests/: test_chunker.py  test_embeddings.py  test_loader.py  test_pipeline.py
