[project]
name = "rag-docs-bot"
version = "0.1.0"
description = "A RAG chatbot that answers questions about your codebase and documentation"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
